Remove collapsing navbar and fix margins when narrow

--- a/app/editor/editor-nav/editor-nav.css
+++ b/app/editor/editor-nav/editor-nav.css
@@ -36,3 +36,7 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.navbar-nav {
+    margin: 0px 0px;
+}
